[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Ricasso-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/game_over.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="game_over" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 837.0
margin_bottom = 636.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 157.0
margin_top = 347.0
margin_right = 413.0
margin_bottom = 398.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Press X to Restart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return_to_menu" type="Label" parent="."]
margin_left = 157.0
margin_top = 473.0
margin_right = 413.0
margin_bottom = 524.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Press Z to return
to main menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="High_Score" type="Label" parent="."]
margin_left = 246.0
margin_top = 29.0
margin_right = 398.0
margin_bottom = 80.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_tracker" type="Label" parent="."]
margin_left = 246.0
margin_top = 184.0
margin_right = 304.0
margin_bottom = 208.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
text = "Test"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_high_score" type="Label" parent="."]
margin_left = 176.0
margin_top = 308.0
margin_right = 232.0
margin_bottom = 359.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 4 )
text = "test
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
